now with linker?

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "clubpointz",
+    "name": "testSails",
     "private": true,
     "version": "0.0.0",
     "description": "a Sails application",
