--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
         "ejs": "0.8.4",
         "optimist": "0.3.4",
         "mocha": "1.14.0",
-        "zombie": "2.0.0-alpha24"
+        "zombie": "2.0.0-alpha24",
+        "sails-mongo": "0.9.5"
     },
     "scripts": {
         "start": "node app.js",
