--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
         "zombie": "2.0.0-alpha24",
         "sails-mongo": "0.9.5",
         "wrench": "1.5.4",
-        "underscore" : "1.5.2"
+        "underscore" : "1.5.2",
+        "mongodb" : "1.3.20"
     },
     "scripts": {
         "start": "node app.js",
