--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
         "mongodb" : "1.3.20"
     },
     "devDependencies" : {
-        "grunt-contrib-jshint": "0.1.1rc6"
+        "grunt-contrib-jshint": "0.1.1rc6",
+        "nodemailer": "0.5.13"
     },
     "scripts": {
         "start": "node app.js",
