--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
         "zombie": "2.0.0-alpha24",
         "sails-mongo": "0.9.5",
         "underscore" : "1.5.2",
-        "mongodb" : "1.3.20"
+        "mongodb" : "1.3.20",
+        "jquery" : "1.8.3"
     },
     "devDependencies" : {
         "grunt-contrib-jshint": "0.1.1rc6",
