--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "devDependencies" : {
         "grunt-contrib-jshint": "0.1.1rc6",
         "nodemailer": "0.5.13",
-        "wrench": "1.5.4"
+        "wrench": "1.5.4",
+        "sinon": "1.7.3"
     },
     "scripts": {
         "start": "node app.js",
