--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
         "sails-mongo": "0.9.5",
         "underscore" : "1.5.2",
         "mongodb" : "1.3.20",
-        "jquery" : "1.8.3"
+        "jquery" : "1.8.3",
+		"q" : "0.9.7"
     },
     "devDependencies" : {
         "grunt-contrib-jshint": "0.1.1rc6",
