--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     },
     "devDependencies" : {
         "grunt-contrib-jshint": "0.1.1rc6",
+        "grunt-contrib-sass": "0.6.0",
         "nodemailer": "0.5.13",
         "wrench": "1.5.4",
         "sinon": "1.7.3"
